# sdk-nrf

doc/nrf/: ug_bt_mesh.rst
doc/nrf/libraries/nfc/rpc/: rpc.rst
subsys/bluetooth/rpc/client/: bt_rpc_gatt_client.c
subsys/bluetooth/rpc/common/: bt_rpc_common.h
subsys/bluetooth/rpc/host/: bt_rpc_gatt_host.c
subsys/emds/: emds.c
subsys/net/openthread/rpc/client/: CMakeLists.txt  ot_rpc_cli_client.c  ot_rpc_commissioner_client.c  ot_rpc_commissioning_client.c  ot_rpc_ctrl_client.c  ot_rpc_if_client.c  ot_rpc_joiner_client.c
subsys/net/openthread/rpc/common/: CMakeLists.txt  ot_rpc_common.c  ot_rpc_common.h  ot_rpc_ids.h
subsys/net/openthread/rpc/server/: ot_rpc_ctrl_server.c  ot_rpc_joiner_server.c
tests/subsys/bluetooth/mesh/bsim_test_mesh/: CMakeLists.txt  _mesh_test.sh  prj.conf
tests/subsys/bluetooth/mesh/bsim_test_mesh/src/: main.c  mesh_test.c  mesh_test.h  test_scheduler_model.c
tests/subsys/bluetooth/mesh/bsim_test_mesh/tests_scripts/scheduler_model/: sched_init.sh
tests/subsys/bluetooth/mesh/scheduler_srv_model/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/bluetooth/mesh/scheduler_srv_model/src/: main.c
tests/subsys/emds/emds_api/src/: main.c
tests/subsys/emds/emds_flash/src/: main.c
